tests/fixtures/invalid/pow_str_str_bytes.py
# Cannot call pow() with Str, Str, Bytes
x = pow("hello", "hello", b"hello")
